--- a/index.html
+++ b/index.html
@@ -178,20 +178,19 @@
 
 <body>
 
-  <!-- Animation canvas -->
+  <!-- Animation layers -->
   <div id="animationContainer"></div>
   <div id="svgContainer" style="display:none;"></div>
 
   <!-- Top: Radial controls -->
   <div id="radialControls" class="control-panel">
     <h3>🎛️ Animation Controls</h3>
+
     <label>Upload SVG or PNG:</label>
-    <div id="dropZone" style="border: 2px dashed #0f0; padding: 20px; text-align: center; margin-bottom: 10px;">
+    <div id="dropZone" style="border:2px dashed #0f0; padding:20px; text-align:center; margin-bottom:10px;">
       Drag & Drop Here
     </div>
-
     <input type="file" id="svgUpload" accept=".svg,.png" style="display:inline-block; width:auto;">
-
 
     <label>Radial Repeats:</label>
     <input type="number" id="repeatCount" min="1" max="64">
@@ -202,23 +201,23 @@
     <label>Radius (px):</label>
     <input type="range" id="radiusSlider" min="0" max="500">
 
-    <label>Center X (%):</label>
-    <input type="range" id="posXSlider" min="0" max="100">
-
-    <label>Center Y (%):</label>
-    <input type="range" id="posYSlider" min="0" max="100">
-
-    <label>Composite Speed:</label>
+    <label>Composite Rotation Speed:</label>
     <input type="range" id="compSpeed" min="-0.1" max="0.1" step="0.001">
 
-    <label>Individual Speed:</label>
+    <label>Individual Spin Speed:</label>
     <input type="range" id="indSpeed" min="-0.2" max="0.2" step="0.001">
 
-    <label>Breathing Rate:</label>
-    <input type="range" id="breathRate" min="0" max="0.2" step="0.001">
+    <label><input type="checkbox" id="scaleToggle"> Enable Scale Pulsation</label>
+    <label>Scale Rate:</label>
+    <input type="range" id="scaleRate" min="0" max="0.2" step="0.001">
+    <label>Scale Amount:</label>
+    <input type="range" id="scaleAmp" min="0" max="1" step="0.01">
 
-    <label>Breathing Amp:</label>
-    <input type="range" id="breathAmp" min="0" max="1" step="0.01">
+    <label><input type="checkbox" id="radialToggle"> Enable Radial Oscillation</label>
+    <label>Oscillation Rate:</label>
+    <input type="range" id="radialRate" min="0" max="0.2" step="0.001">
+    <label>Oscillation Amount (px):</label>
+    <input type="range" id="radialAmp" min="0" max="200" step="1">
 
     <label>Background:</label>
     <input type="color" id="bgColorPicker">
@@ -226,12 +225,8 @@
     <label><input type="checkbox" id="colorShiftToggle"> Hue-Shift</label>
     <label>Hue Speed:</label>
     <input type="range" id="hueSpeed" min="0" max="5" step="0.1">
-
     <label>Hue Drift Speed:</label>
     <input type="range" id="hueDriftSpeed" min="-2" max="2" step="0.01" value="0.2">
-
-    <label><input type="checkbox" id="breathToggle"> Enable Breathing</label>
-
   </div>
 
   <!-- Bottom: Audio controls -->
@@ -242,25 +237,20 @@
 
     <label>Sensitivity:</label>
     <input type="range" id="audioSens" min="0" max="5" step="0.1">
-
     <label>Bass Boost:</label>
     <input type="range" id="bassBoost" min="0" max="5" step="0.1">
-
     <label>Mid Boost:</label>
     <input type="range" id="midBoost" min="0" max="5" step="0.1">
-
     <label>Treble Boost:</label>
     <input type="range" id="trebBoost" min="0" max="5" step="0.1">
-
     <label>Max Radius Mod (px):</label>
     <input type="range" id="audioModMax" min="0" max="500" step="10">
-
   </div>
 
   <script>
     // === Globals & DOM refs ===
     let sourceSvg = null, vbW = 1, vbH = 1;
-    let clones = [], compAng = 0, breathAng = 0, hueAng = 0, running = false;
+    let clones = [], compAng = 0, scaleAng = 0, hueAng = 0, radOscAng = 0, running = false;
 
     const svgUpload = document.getElementById('svgUpload');
     const repeatCountIn = document.getElementById('repeatCount');
@@ -268,13 +258,19 @@
     const radiusSlider = document.getElementById('radiusSlider');
     const compSpeedIn = document.getElementById('compSpeed');
     const indSpeedIn = document.getElementById('indSpeed');
-    const breathRateIn = document.getElementById('breathRate');
-    const breathAmpIn = document.getElementById('breathAmp');
+
+    const scaleToggle = document.getElementById('scaleToggle');
+    const scaleRateIn = document.getElementById('scaleRate');
+    const scaleAmpIn = document.getElementById('scaleAmp');
+
+    const radialToggle = document.getElementById('radialToggle');
+    const radialRateIn = document.getElementById('radialRate');
+    const radialAmpIn = document.getElementById('radialAmp');
+
     const bgPicker = document.getElementById('bgColorPicker');
     const hueToggle = document.getElementById('colorShiftToggle');
     const hueSpeedIn = document.getElementById('hueSpeed');
     const hueDriftSpeedIn = document.getElementById('hueDriftSpeed');
-    const breathToggle = document.getElementById('breathToggle');
 
     const audioToggle = document.getElementById('audioToggle');
     const audioSensIn = document.getElementById('audioSens');
@@ -285,7 +281,6 @@
 
     const animContainer = document.getElementById('animationContainer');
     const svgContainer = document.getElementById('svgContainer');
-
     const SETTINGS_KEY = 'radialAnimatorSettings';
 
     // sensible defaults
@@ -293,12 +288,12 @@
       repeats: 12,
       size: 150,
       radius: 200,
-      posX: 50,
-      posY: 50,
       compSpeed: 0.005,
       indSpeed: 0.05,
-      breathRate: 0.02,
-      breathAmp: 0.1,
+      scaleRate: 0.02,
+      scaleAmt: 0.1,
+      radialRate: 0.02,
+      radialAmt: 50,
       bgColor: '#111111',
       hueMode: false,
       hueSpeed: 0.2,
@@ -309,15 +304,15 @@
       trebBoost: 1,
       audioModMax: 100,
       audioReactive: false,
-      breathEnabled: false,
+      scaleEnabled: false,
+      radialEnabled: false
     };
 
     function loadSettings() {
       const saved = localStorage.getItem(SETTINGS_KEY);
       if (!saved) return;
       try {
-        const obj = JSON.parse(saved);
-        Object.assign(D, obj);
+        Object.assign(D, JSON.parse(saved));
       } catch (e) {
         console.warn('Failed to parse saved settings', e);
       }
@@ -330,19 +325,22 @@
         radius: +radiusSlider.value,
         compSpeed: +compSpeedIn.value,
         indSpeed: +indSpeedIn.value,
-        breathRate: +breathRateIn.value,
-        breathAmp: +breathAmpIn.value,
+        scaleRate: +scaleRateIn.value,
+        scaleAmt: +scaleAmpIn.value,
+        radialRate: +radialRateIn.value,
+        radialAmt: +radialAmpIn.value,
         bgColor: bgPicker.value,
         hueMode: hueToggle.checked,
         hueSpeed: +hueSpeedIn.value,
+        hueDriftSpeed: +hueDriftSpeedIn.value,
         audioSens: +audioSensIn.value,
         bassBoost: +bassBoostIn.value,
         midBoost: +midBoostIn.value,
         trebBoost: +trebBoostIn.value,
         audioModMax: +audioModMaxIn.value,
         audioReactive: audioToggle.checked,
-        hueDriftSpeed: +hueDriftSpeedIn.value,
-        breathEnabled: breathToggle.checked
+        scaleEnabled: scaleToggle.checked,
+        radialEnabled: radialToggle.checked
       };
       localStorage.setItem(SETTINGS_KEY, JSON.stringify(obj));
     }
@@ -353,67 +351,61 @@
       radiusSlider.value = D.radius;
       compSpeedIn.value = D.compSpeed;
       indSpeedIn.value = D.indSpeed;
-      breathRateIn.value = D.breathRate;
-      breathAmpIn.value = D.breathAmp;
+      scaleRateIn.value = D.scaleRate;
+      scaleAmpIn.value = D.scaleAmt;
+      radialRateIn.value = D.radialRate;
+      radialAmpIn.value = D.radialAmt;
       bgPicker.value = D.bgColor;
       hueToggle.checked = D.hueMode;
       hueSpeedIn.value = D.hueSpeed;
+      hueDriftSpeedIn.value = D.hueDriftSpeed;
       audioSensIn.value = D.audioSens;
       bassBoostIn.value = D.bassBoost;
       midBoostIn.value = D.midBoost;
       trebBoostIn.value = D.trebBoost;
       audioModMaxIn.value = D.audioModMax;
       audioToggle.checked = D.audioReactive;
-      hueDriftSpeedIn.value = D.hueDriftSpeed;
-      breathToggle.checked = D.breathEnabled;
+      scaleToggle.checked = D.scaleEnabled;
+      radialToggle.checked = D.radialEnabled;
       document.body.style.background = D.bgColor;
     }
 
     function attachSaveListeners() {
-      const inputs = document.querySelectorAll('input');
-      inputs.forEach(input => {
+      document.querySelectorAll('input').forEach(input => {
         input.addEventListener('input', saveSettings);
         input.addEventListener('change', saveSettings);
       });
     }
 
-    // === Your original event listeners and animate loop ===
-
+    // Background picker live update
     bgPicker.addEventListener('input', e => {
-      document.documentElement.style.background = e.target.value;
+      document.body.style.background = e.target.value;
     });
 
+    // File upload & drag/drop
     svgUpload.addEventListener('change', e => {
       const f = e.target.files[0];
       if (!f) return;
-      handleFile(f)
+      handleFile(f);
     });
-
     const dropZone = document.getElementById('dropZone');
-
-    dropZone.addEventListener('dragover', (e) => {
+    dropZone.addEventListener('dragover', e => {
       e.preventDefault();
       dropZone.style.background = 'rgba(0,255,0,0.2)';
     });
-
     dropZone.addEventListener('dragleave', () => {
       dropZone.style.background = 'transparent';
     });
-
-    dropZone.addEventListener('drop', (e) => {
+    dropZone.addEventListener('drop', e => {
       e.preventDefault();
       dropZone.style.background = 'transparent';
       const file = e.dataTransfer.files[0];
-      if (file) {
-        handleFile(file);
-      }
+      if (file) handleFile(file);
     });
 
-    // Reusable file handler (called by both input and drag-and-drop)
     function handleFile(f) {
       const ext = f.name.split('.').pop().toLowerCase();
       const r = new FileReader();
-
       r.onload = ev => {
         if (ext === 'svg') {
           const doc = new DOMParser().parseFromString(ev.target.result, 'image/svg+xml');
@@ -421,36 +413,28 @@
           if (!svg) return alert('Invalid SVG!');
           svgContainer.innerHTML = '';
           svgContainer.appendChild(svg);
-
           sourceSvg = svg;
           const vb = svg.viewBox.baseVal;
           vbW = vb.width || svg.clientWidth;
           vbH = vb.height || svg.clientHeight;
-
-          // ✅ Save SVG text into localStorage
           localStorage.setItem('savedFileType', 'svg');
           localStorage.setItem('savedFileData', ev.target.result);
-
         } else if (ext === 'png') {
           const img = new Image();
           img.src = ev.target.result;
           img.style.display = 'block';
           svgContainer.innerHTML = '';
           svgContainer.appendChild(img);
-
           sourceSvg = img;
           vbW = img.width || 100;
           vbH = img.height || 100;
-
-          // ✅ Save PNG Data URL into localStorage
           localStorage.setItem('savedFileType', 'png');
           localStorage.setItem('savedFileData', ev.target.result);
         } else {
           alert('Unsupported file type!');
           return;
         }
-
-        compAng = breathAng = hueAng = 0;
+        compAng = scaleAng = hueAng = radOscAng = 0;
         setDefaults();
         buildMonads();
         if (!running) {
@@ -458,35 +442,26 @@
           requestAnimationFrame(animate);
         }
       };
-
-      if (ext === 'svg') {
-        r.readAsText(f);
-      } else if (ext === 'png') {
-        r.readAsDataURL(f);
-      } else {
-        alert('Unsupported file type!');
-      }
+      if (ext === 'svg') r.readAsText(f);
+      else if (ext === 'png') r.readAsDataURL(f);
+      else alert('Unsupported file type!');
     }
 
     function loadSavedFile() {
       const type = localStorage.getItem('savedFileType');
       const data = localStorage.getItem('savedFileData');
-
       if (!type || !data) return;
-
       svgContainer.innerHTML = '';
-
       if (type === 'svg') {
         const doc = new DOMParser().parseFromString(data, 'image/svg+xml');
         const svg = doc.querySelector('svg');
         if (!svg) return;
-
         svgContainer.appendChild(svg);
         sourceSvg = svg;
         const vb = svg.viewBox.baseVal;
         vbW = vb.width || svg.clientWidth;
         vbH = vb.height || svg.clientHeight;
-      } else if (type === 'png') {
+      } else {
         const img = new Image();
         img.src = data;
         img.style.display = 'block';
@@ -495,8 +470,7 @@
         vbW = img.width || 100;
         vbH = img.height || 100;
       }
-
-      compAng = breathAng = hueAng = 0;
+      compAng = scaleAng = hueAng = radOscAng = 0;
       setDefaults();
       buildMonads();
       if (!running) {
@@ -510,17 +484,20 @@
     });
 
     function buildMonads() {
-      clones = []; animContainer.innerHTML = '';
+      clones = [];
+      animContainer.innerHTML = '';
       const n = parseInt(repeatCountIn.value, 10);
       for (let i = 0; i < n; i++) {
         const c = sourceSvg.cloneNode(true);
-        c.removeAttribute('style'); c.style.display = 'block';
+        c.removeAttribute('style');
+        c.style.display = 'block';
         c.classList.add('monad');
         animContainer.appendChild(c);
         clones.push({ el: c, ang: 0 });
       }
     }
 
+    // Audio setup
     let audioCtx, analyser, freqData;
     audioToggle.addEventListener('change', async () => {
       if (audioToggle.checked && !audioCtx) {
@@ -539,85 +516,83 @@
       }
     });
 
+    // Main animation loop
     function animate() {
-      // live values
       const baseSize = +sizeSlider.value;
       const baseRad = +radiusSlider.value;
-      const cx = 0.5 * animContainer.clientWidth;
-      const cy = 0.5 * animContainer.clientHeight;
       const compSpd = +compSpeedIn.value;
       const indSpd = +indSpeedIn.value;
-      const bRate = +breathRateIn.value;
-      const bAmp = +breathAmpIn.value;
+      const sRate = +scaleRateIn.value;
+      const sAmt = +scaleAmpIn.value;
+      const rRate = +radialRateIn.value;
+      const rAmt = +radialAmpIn.value;
       const bg = bgPicker.value;
       const hueOn = hueToggle.checked;
       const hueSpd = +hueSpeedIn.value;
+      const hueDr = +hueDriftSpeedIn.value;
 
-      // audio params
-      const audioOn = audioToggle.checked && analyser;
-      const sens = +audioSensIn.value;
-      const bassB = +bassBoostIn.value;
-      const midB = +midBoostIn.value;
-      const trebB = +trebBoostIn.value;
-      const maxMod = +audioModMaxIn.value;
-
-      document.body.style.background = bg;
-      compAng += compSpd;
-      breathAng += bRate;
-      if (hueOn) {
-        const driftSpeed = +hueDriftSpeedIn.value;
-        hueAng = (hueAng + driftSpeed) % 360;
-      }
-
-      // get audio level
+      // audio processing
       let audioLevel = 0;
-      if (audioOn) {
+      if (audioToggle.checked && analyser) {
         analyser.getByteFrequencyData(freqData);
         const len = freqData.length;
         const third = Math.floor(len / 3);
         const bass = freqData.slice(0, third).reduce((a, v) => a + v, 0) / third;
         const mid = freqData.slice(third, 2 * third).reduce((a, v) => a + v, 0) / third;
         const treb = freqData.slice(2 * third).reduce((a, v) => a + v, 0) / (len - 2 * third);
-        const totalWeight = bassB + midB + trebB;
-        const weighted = bass * bassB + mid * midB + treb * trebB;
-        audioLevel = (weighted / 255 / totalWeight) * sens;
+        const totalW = (+bassBoostIn.value) + (+midBoostIn.value) + (+trebBoostIn.value);
+        const weighted = bass * +bassBoostIn.value + mid * +midBoostIn.value + treb * +trebBoostIn.value;
+        audioLevel = (weighted / 255 / totalW) * +audioSensIn.value;
       }
+
+      document.body.style.background = bg;
+      compAng += compSpd;
+      scaleAng += sRate;
+      radOscAng += rRate;
+      if (hueOn) hueAng = (hueAng + hueDr) % 360;
 
       const n = clones.length;
       const step = Math.PI * 2 / n;
       clones.forEach((c, i) => {
-        // dynamic radius = base + audio pulse
-        const rad = baseRad + audioLevel * maxMod;
-
+        // dynamic radius + oscillation
+        let rad = baseRad + audioLevel * +audioModMaxIn.value;
+        if (radialToggle.checked) {
+          rad += rAmt * Math.sin(radOscAng + i * step);
+        }
+        // compute position
         const ang = i * step + compAng;
+        const cx = animContainer.clientWidth / 2;
+        const cy = animContainer.clientHeight / 2;
         const x = cx + rad * Math.cos(ang);
         const y = cy + rad * Math.sin(ang);
 
+        // update rotation
         c.ang += indSpd;
-        const scale = 1 + bAmp * Math.sin(breathAng + i * step);
+
+        // scale pulsation
+        const scale = scaleToggle.checked
+          ? 1 + sAmt * Math.sin(scaleAng + i * step)
+          : 1;
 
         const wpx = baseSize * scale;
         const hpx = baseSize * scale * (vbH / vbW);
 
-        // apply
+        // apply to DOM
         c.el.style.width = wpx + 'px';
         c.el.style.height = hpx + 'px';
         c.el.style.left = (x - wpx / 2) + 'px';
         c.el.style.top = (y - hpx / 2) + 'px';
         c.el.style.transform = `rotate(${c.ang}rad)`;
 
+        // color shift + brightness/sat modulation
         if (hueOn) {
           const shift = (hueAng + i * (360 / n)) % 360;
-          let brightness = 1;
-          let saturation = 1;
-
-          // Breathing modulation
-          if (breathToggle.checked) {
-            const breath = (Math.sin(performance.now() * 0.001) + 1) / 2; // oscillates 0 to 1
-            brightness = 0.75 + 0.25 * breath; // brightness from 0.75 to 1
-            saturation = 0.75 + 0.5 * breath;  // saturation from 0.75 to 1.25
+          let brightness = 1, saturation = 1;
+          if (scaleToggle.checked) {
+            const t = (Math.sin(scaleAng + i * step) + 1) / 2;
+            brightness = 0.75 + 0.25 * t;
+            saturation = 0.75 + 0.5 * t;
           }
-
           c.el.style.filter = `
             brightness(${brightness})
             saturate(${saturation})
@@ -636,8 +611,9 @@
     setDefaults();
     loadSavedFile();
     attachSaveListeners();
-
+    requestAnimationFrame(animate);
   </script>
+
 </body>
 
 </html>
