--- a/index.html
+++ b/index.html
@@ -205,10 +205,15 @@
     <h3>🎛️ Animation Controls</h3>
 
     <label>Upload SVG or PNG:</label>
-    <div id="dropZone" style="border:2px dashed #0f0; padding:20px; text-align:center; margin-bottom:10px;">
-      Drag & Drop Here
+    <div id="dropZone"
+      style="border:2px dashed #0f0; padding:20px; text-align:center; margin-bottom:10px; cursor:pointer; position:relative;">
+      <input type="file" id="svgUpload" accept=".svg,.png"
+        style="position:absolute; width:100%; height:100%; top:0; left:0; opacity:0; cursor:pointer;">
+      <div style="pointer-events:none;">
+        <div style="margin-bottom:8px;">📁 Drag & Drop Here</div>
+        <div style="font-size:12px; color:#0f0;">or click to choose file</div>
+      </div>
     </div>
-    <input type="file" id="svgUpload" accept=".svg,.png" style="display:inline-block; width:auto;">
 
     <label>Radial Repeats:</label>
     <div class="slider-container">
